<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">group 13-2</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="connect">Connect</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="auto_update">Auto Update</string>
    <string name="manual_update">Manual Update</string>
    <string name="explore">Explore</string>
    <string name="fastest_path">Fastest Path</string>
    <string name="terminate_explore">Terminate Exploration</string>
    <string name="gesture">Gesture</string>
    <string name="tilt">Tilt</string>
    <string name="remove_waypoint">Remove Waypoint</string>
    <string name="set_waypoint">Set Waypoint</string>
    <string name="set_robot_pos">Set Robot Pos</string>
    <string name="status">Status:</string>
    <string name="send">Send Msg</string>
    <string name="message">Bluetooth</string>
    <string name="connect_bluetooth">Connect Bluetooth</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="secure_connect">Connect to Device</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make Discoverable</string>
    <string name="set_config1">Configure String 1</string>
    <string name="set_config2">Configure String 2</string>
    <string name="config1_button">Config 1</string>
    <string name="config2_button">Config 2</string>
    <string name="mdf_string_2_discovered_obstacles">Map Descriptor: Discovered Obstacles</string>
    <string name="mdf_string_1_explored_squares">Map Descriptor: Explored Squares</string>
    <string name="image_recognition_string">Image Recognition String</string>
    <string name="update">Update</string>
</resources>
